aws/projects/16-aws-self-managed-k8s-cluster-autoscaler/k8s-deployment/NFS-server/first-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nfs-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "TCP"
spec:
  ingressClassName: nginx-nlb
  rules:
    - host: k8-workers-nlb-f1cd040ed88be998.elb.us-east-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nfs-service
                port:
                  number: 2049
